# narwhals-map

./: LICENSE  README.md  justfile  noxfile.py  prek.toml  pyproject.toml  ruff.toml
.github/workflows/: _qa.yml  main.yml  pr.yml  release.yml
.zed/: settings.json
src/narwhals_map/: __init__.py  _dtype.py  _narwhals_patch.py  expr_map.py  series_map.py
src/narwhals_map/_arrow/: expr_map.py  series_map.py
src/narwhals_map/_compliant/: namespace.py
src/narwhals_map/_ibis/: expr_map.py
src/narwhals_map/_polars/: expr_map.py  series_map.py
tests/: test_map.py
