[project]
name = "narwhals-map"
version = "0.1.0"
description = "A Narwhals plugin for Map datatype support"
readme = "README.md"
authors = [
    { name = "danielgafni", email = "danielgafni16@gmail.com" }
]
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
]

[project.optional-dependencies]
pyarrow = [
    "pyarrow>=23.0.1",
]
polars = [
    "polars>=1.39.3",
    "polars-map>=0.2.1",
]
ibis = [
    "ibis-framework>=12.0.0",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
test = [
    "narwhals>=2.18.1",
    "pytest>=9.0.2",
    "pytest-cases>=3.10.1",
    "ibis-framework[duckdb]>=12.0.0",
    "nox>=2026.2.9",
    "nox-uv>=0.7.1",
]
dev = [
    { include-group = "test" },
    "prek>=0.3.8",
    "pyrefly>=0.59.1",
    "ruff>=0.15.9",
]
